--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"dependencies": {
 		"express": "^4.14.0"
 	},
-	"author": "zyzyx",
+	"author": "zyzyx1",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
