--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"engines": {
 		"node": "8.11.2"
 	},
+
+	"description": "A project that does something awesome",
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
