--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"engines": {
 		"node": "8.11.2"
 	},
-"keywords": [ "freecodecamp", "related", "words" ],
+	"keywords": [ "freecodecamp", "related", "words" ],
+	"license": "MIT",
 	"description": "A project that does something awesome",
 	"repository": {
 		"type": "git",
